[tool.poetry]
name = "old_boot"
version = "0.1.0"
description = "A simple project to send junk to a phishing site"
authors = ["John Scimone <john@scimone.net>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
Faker = "^13.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
